--- a/i18n/ru.json
+++ b/i18n/ru.json
@@ -25,5 +25,7 @@
     "logout": "Выход",
     "original_url": "Оригинальная ссылка",
     "short_url": "Укороченная ссылка",
-    "author": "Автор"
+    "author": "Автор",
+    "message_for_short": "Ссылка укорачивается автоматически, методом рандомного генерирования эмодзи",
+    "dont_ref": "Ссылок не найдено"
 }
